@@ -1,3 +1,3 @@
-EBUILD qmmp-9999.ebuild 2222 RMD160 728695c1ba42c5125cab469096c3789a1ebad3dc SHA1 3a4408559ab281887da28528bfbb55c58a1288ae SHA256 b1b78d8c8dfda27e49a4905f546905910ff2780695c113e0d8f78a5aea736941
-MISC ChangeLog 884 RMD160 c0fbf742fe1fde14e5ec1fc2a9bc7e5876eb9ac6 SHA1 7404707c60e084b5269bc8c1ccda24a6e3873f37 SHA256 dd6c471f0fa8537d39c08561bf6ce6b429da88d367dd6601406f9575116f3b44
+EBUILD qmmp-9999.ebuild 2253 RMD160 4dc84cc56ee4ee4215471673b4c48679c1f98dfa SHA1 9e4fb269641e91171b81154947dd8d06b151247e SHA256 e4903b227827d4bea791564ca89302360011682429f51d851b2c87a15b51abb9
+MISC ChangeLog 983 RMD160 6c53b11826136de7f92e7b4fd19dbbdb6b52401b SHA1 32dda59df7dea18a9dcfbb441dd546e65a3a8cef SHA256 f464c990425a9e40af5111595e31b382f5c2debf6e05ab50195a52e79ca6b9c2
 MISC metadata.xml 467 RMD160 902dc34ff2858f3c1e0fc1a9bb4480f889a28a27 SHA1 cc040f1519138421f39d539a3ba3f616580db32d SHA256 9a7fdeabe603be14bc5517c18dfb5b52e90650ae5619addcf4adbd65a5071603
