@@ -2,6 +2,9 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  13 Jul 2009; Markos Chandras <hwoarang@gentoo.org> qmmp-9999.ebuild:
+  Sync with portage ebuild
+
   11 Jul 2009; Markos Chandras <hwoarang@gentoo.org> -qmmp-0.3.0.ebuild:
   On tree
 
